# supersemgrep

./: .gitignore  Dockerfile  README.md  environment.yml  pyproject.toml
.github/workflows/: release.yml  schedule.yml
rules/: github.yaml  images.yaml  spotify.yaml
samples/: github_repos.json  images.json  spotify_playlists.json
src/supersemgrep/: __main__.py  agent.py  configs.py  main.py  scans.py  targets.py
src/supersemgrep/loaders/: __init__.py  base.py  github.py  github_repos.py  images.py  spotify_playlists.py
