[tool.poetry]
name = "supersemgrep"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
semgrep = "^0.57.0"
"ruamel.yaml" = "^0.17.10"
requests = "^2.25.1"
click = "^8.0.1"
attrs = "^21.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
